--- a/src/app/confirm-dialog/confirm-dialog.component.scss
+++ b/src/app/confirm-dialog/confirm-dialog.component.scss
@@ -21,6 +21,10 @@ mat-dialog-content {
   margin: 12px 0;
 }
 
+mat-form-field {
+  width: 100%;
+}
+
 mat-dialog-actions {
   button {
     font-weight: bold;
