--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,13 +2,19 @@
   <header class="header">
     <div class="logo" routerLink="/home"><img src="images/logo-300.png"></div>
     @if(loggedIn()) {
-      <button mat-icon-button [matMenuTriggerFor]="menu" class="hamburger-button">
-        @if(myInfo().imageUrl) {
-          <img [src]="myInfo().imageUrl" alt="picture" class="hamburger-photo"/>
-        } @else {
-          <mat-icon>menu</mat-icon>
-        }
-      </button>
+      <span class="right-side-buttons">
+        <span>
+          <app-notification-inbox></app-notification-inbox>
+        </span>
+
+        <button mat-icon-button [matMenuTriggerFor]="menu" class="hamburger-button">
+          @if(myInfo().imageUrl) {
+            <img [src]="myInfo().imageUrl" alt="picture" class="hamburger-photo"/>
+          } @else {
+            <mat-icon>menu</mat-icon>
+          }
+        </button>
+      </span>
 
       <mat-menu #menu="matMenu">
         <button mat-menu-item routerLink="/home">
