--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -41,11 +41,22 @@ header {
     height: 100%;
   }
 
-  .hamburger-button {
-    position: fixed;
-    top: 1rem;
-    right: 1rem;
+  .right-side-buttons {
+    position: absolute;
+    top: 20px;
+    right: 8px;
     z-index: 1000;
+    // border: 2px solid #ff4081;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+  }
+
+  .hamburger-button {
+    // position: fixed;
+    // top: 1rem;
+    // right: 1rem;
+    // z-index: 1000;
     background: white;
     border-radius: 50%;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
