Switched from toast messages to angular notifier. Added MessageService for components to send messages tot he user. Cleaned up some stuff in getFriends() and listNeighbors().

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="container">
   <header class="header">
+    <notifier-container></notifier-container>
     <div class="logo" routerLink="/home"><img src="images/logo-300.png"></div>
     @if(loggedIn()) {
       <span class="right-side-buttons">
