--- a/src/app/browsetools/browsetools.component.html
+++ b/src/app/browsetools/browsetools.component.html
@@ -3,6 +3,12 @@
         @if(allVisibleObjects) {
             <div class="header">
                 <h2><span [class.bounce]="objectCountBounceFlag()">🔍</span> <span [class.bounce]="objectCountBounceFlag()">{{ allVisibleObjectsCount() }}</span> Tools</h2>
+                <span>Search radius:</span>
+                <select #radiusSelect [(ngModel)]="this.radius" (click)="radiusChange(+radiusSelect.value)">
+                    @for (radius of this.globalValuesService.browseRadii; track radius.value) {
+                        <option [value]="radius.value">{{ radius.text }}</option>
+                    }
+                </select>
             </div>
 
             @for(_tool of allVisibleObjects; track _tool.id; let i = $index) {
