--- a/src/app/user/friends/managefriends.component.html
+++ b/src/app/user/friends/managefriends.component.html
@@ -5,35 +5,17 @@
                 <h2><span [class.bounce]="objectCountBounceFlag()">🔍</span> <span [class.bounce]="objectCountBounceFlag()">{{ allVisibleObjectsCount() }}</span> Neighbors</h2>
             </div>
 
-            @for(_neighbor of allVisibleObjects; track _neighbor.id; let i = $index) {
-                @let neighbor = asNeighbor(_neighbor);
-                <mat-card #objectCards class="person-card" (click)="onListObjectClick(i)">
-                    <mat-card-content>
-                        <h2 class="person-name">{{ neighbor.name }}</h2>
-                        <div class="person-body">
-                            <img [src]="neighbor.imageUrl" [alt]="neighbor.name" class="person-image"/>
-                            <span class="neighbor-type" >
-                                @if(neighbor.is_friend) {
-                                    @if(neighbor.depth == 1) {
-                                        <span class="friend-tag">Friend</span>
-                                    }
-                                    @else {
-                                        <span class="friend-tag friend-of-friend-tag">Friend of Friend</span>
-                                    }
-                                }
-                                @if(neighbor.friendship_requested) {
-                                    <span class="friend-tag friend-request-tag">Requested</span>
-                                }
-                            </span>
-                            <div class="person-info">
-                                <p class="person-address">{{ neighbor.home_address }} </p>
-                                @if (neighbor.tool_count > 0) {
-                                    <p class="person-toolcount">Sharing {{ neighbor.tool_count }} tools!</p>
-                                }
-                            </div>
+            @for(neighbor of allVisibleObjects; track neighbor.id; let i = $index) {
+                <div #objectCards>
+                    @defer (on viewport) {
+                        <app-friends-neighbor-card [object]="neighbor" (click)="onListObjectClick(i)"></app-friends-neighbor-card>
+                    }
+                    @placeholder {
+                        <div class="neighbord-card-placeholder">
+                            <img src="https://wp.angular.love/wp-content/uploads/2024/04/image3.png">
                         </div>
-                    </mat-card-content>
-                </mat-card>
+                    }
+                </div>
             }
         }
     </div>
