--- a/src/app/user/mytools/mytools.component.html
+++ b/src/app/user/mytools/mytools.component.html
@@ -7,19 +7,16 @@
             </div>
 
             @for(tool of tools; track tool.id; let i = $index) {
-                <mat-card #toolCards class="tool-card" (click)="selectTool(tool.id)">
-                    <mat-card-title>{{ tool.brand }}</mat-card-title>
-                    <mat-card-subtitle>{{ tool.short_name }}</mat-card-subtitle>
-                    <mat-card-content class="tool-details">
-                        <div>
-                            <h3>{{ tool.name }}</h3>
-                            <a class="tool-link" [href]="tool.product_url" target="_blank" rel="noopener noreferrer">Product Link</a>
+                <div>
+                    @defer (on viewport) {
+                        <app-browse-tool-card [object]="tool" [showOwner]="false" (click)="selectTool(i)"></app-browse-tool-card>
+                    }
+                    @placeholder { 
+                        <div class="tool-card-placeholder">
+                            <img src="https://wp.angular.love/wp-content/uploads/2024/04/image3.png">
                         </div>
-                        <div>
-                            <img [src]="tool.imageUrl" [alt]="tool.name" class="tool-image" />
-                        </div>
-                    </mat-card-content>
-                </mat-card>
+                    }
+                </div>
             }
         }
     </div>
