--- a/src/app/user/friends/managefriends.component.html
+++ b/src/app/user/friends/managefriends.component.html
@@ -3,6 +3,12 @@
         @if(allVisibleObjects) {
             <div class="neighbor-header">
                 <h2><span [class.bounce]="objectCountBounceFlag()">🔍</span> <span [class.bounce]="objectCountBounceFlag()">{{ allVisibleObjectsCount() }}</span> Neighbors</h2>
+                <span>Search radius:</span>
+                <select #radiusSelect [(ngModel)]="this.radius" (click)="radiusChange(+radiusSelect.value)">
+                    @for (radius of this.globalValuesService.browseRadii; track radius.value) {
+                        <option [value]="radius.value">{{ radius.text }}</option>
+                    }
+                </select>
             </div>
 
             @for(neighbor of allVisibleObjects; track neighbor.id; let i = $index) {
