--- a/src/app/user/friends/managefriends.component.scss
+++ b/src/app/user/friends/managefriends.component.scss
@@ -20,6 +20,7 @@
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
   margin-bottom: 1rem;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
