Put mat-spinner in instead of some rando picture.

--- a/src/app/browsetools/browsetools.component.html
+++ b/src/app/browsetools/browsetools.component.html
@@ -18,7 +18,7 @@
                     }
                     @placeholder { 
                         <div class="tool-card-placeholder">
-                            <img src="https://wp.angular.love/wp-content/uploads/2024/04/image3.png">
+                            <mat-spinner></mat-spinner>
                         </div>
                     }
                 </div>
