Added borrow tool function. Added status field to tool.  WIP.

--- a/src/app/tool-card/tool-card.component.html
+++ b/src/app/tool-card/tool-card.component.html
@@ -14,7 +14,9 @@
     <div class="right-col">{{ tool.replacement_cost | currency }}</div>
   </div>
   <section class="button-section">
-    <button class="btn friend" (click)="borrow()">Borrow</button>
+    <!-- TODO: Put the right buttons on the screen -->
+      <button class="btn friend" (click)="borrow()">Borrow</button>
+      <button class="btn" (click)="cancelrequest()">Cancel</button>
   </section>
 
 </div>
