--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,55 +1,56 @@
-<!-- Navigation message -->
-@if (routerMessage != null) {
-    <div>{{ routerMessage }}</div>
-}
+<div class="container">
+    <h2>🧑‍💻 User Login</h2>
+    <mat-card>
+        <mat-card-header>
+            <mat-card-title>Login</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <form id="login" [formGroup]="loginFormGroup" (ngSubmit)="login()">
 
-<!-- Login Form -->
-<mat-card>
-    <mat-card-header>
-        <mat-card-title>Login</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-        <form id="login" [formGroup]="loginFormGroup" (ngSubmit)="login()">
+                <!-- UserID -->
+                <mat-form-field>
+                    <mat-label>User ID</mat-label>
+                    <input matInput placeholder="" formControlName="userid" required>
+                    @if(userid.invalid && (userid.dirty || userid.touched)) {
+                        <mat-error>Please enter a valid userid.</mat-error>
+                    }
+                </mat-form-field>
 
-            <!-- UserID -->
-            <mat-form-field>
-                <mat-label>User ID</mat-label>
-                <input matInput placeholder="" formControlName="userid" required>
-                @if(userid.invalid && (userid.dirty || userid.touched)) {
-                    <mat-error>Please enter a valid userid.</mat-error>
+                <!-- Password -->
+                <mat-form-field>
+                    <mat-label>Password</mat-label>
+                    <input matInput [type]="hidePassword ? 'password' : 'text'" formControlName="password" required>
+                </mat-form-field>
+
+                <!-- Submission error message -->
+                @if (errorMessage.length > 0) {
+                    <mat-error>
+                        {{ errorMessage }}
+                    </mat-error>
                 }
-            </mat-form-field>
+            </form>
 
-            <!-- Password -->
-            <mat-form-field>
-                <mat-label>Password</mat-label>
-                <input matInput [type]="hidePassword ? 'password' : 'text'" formControlName="password" required>
-            </mat-form-field>
+        </mat-card-content>
+    </mat-card>
 
-            <!-- Submission error message -->
-            @if (errorMessage.length > 0) {
-                <mat-error>
-                    {{ errorMessage }}
-                </mat-error>
-            }
-        </form>
+    <div class="buttons">
 
-    </mat-card-content>
-</mat-card>
+        <!-- Login button -->
+        <button mat-raised-button class="first_button" [disabled]="!loginFormGroup.valid" form="login" type="submit">
+            <span [ngClass]="{ 'spinner-border spinner-border-sm': loading }"></span> Login 
+        </button> 
 
-<!-- Login button -->
-<button mat-raised-button class="first_button" [disabled]="!loginFormGroup.valid" form="login" type="submit">
-    <span [ngClass]="{ 'spinner-border spinner-border-sm': loginRunning }"></span> Login 
-</button> 
+        <!-- Forgot password button -->
+        <button mat-raised-button>
+            <span [routerLink]="'/forgotpassword'"> Forgot Password? </span>
+        </button> 
+    </div>
 
-<!-- Forgot password button -->
-<button mat-raised-button>
-    <span [routerLink]="'/forgotpassword'"> Forgot Password? </span>
-</button> 
-
-<div class="donthavea">
-    <span [routerLink]="'/register'">
-        Don't have an account?
-    </span>
+    <div class="buttons">
+        <span [routerLink]="'/register'">
+            <button class="donthavea" mat-raised-button>
+                Don't have an account?
+            </button>
+        </span>
+    </div>
 </div>
-
