--- a/src/app/user/login/login.component.scss
+++ b/src/app/user/login/login.component.scss
@@ -1,3 +1,35 @@
+:host {
+  display: flex;
+  background-image: url('/intro.png');
+  background-size: cover;
+  background-position: center;
+  height: 100%;
+  justify-content: center;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+    height: fit-content;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    background: linear-gradient(to bottom right, rgba(255, 250, 205, 0.9), rgba(240, 230, 140, 0.9));
+    border-radius: 12px;
+    box-shadow: 0 0 4px rgba(0,0,0,0.2);
+    border: 4px solid #333;
+    padding: 2rem;
+}
+
+h2 {
+  text-align: center;
+  margin-top: 0.1rem;
+  margin-bottom: 1.5rem;
+  font-family: 'Segoe UI', sans-serif;
+}
+
 mat-card-title,
 mat-card-content {
     display: flex;
@@ -15,14 +47,13 @@ mat-form-field {
     display: block;
 }
 
-.donthavea {
+.buttons {
     display: flex;
-    justify-content: center;
-    width: 100%;
-    padding-top: 50px;
-    color: indigo;
+    width: fit-content;
+    margin-bottom: 1em;
+    gap: 1rem;
 }
 
-.first_button {
-    margin-right: 15px;
+.donthavea {
+    font-style: italic;
 }
