--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -1,70 +1,184 @@
-<div class="settings-container">
-    <h2>🧑‍💻 User Registration</h2>
-    <form [formGroup]="settingsForm" (ngSubmit)="onSubmit()">
-        <!-- Login Information Section -->
-        <fieldset class="section">
-            <legend>Login Information</legend>
-            <div class="form-row">
-                <label for="userid">User ID</label>
-                <input id="userid" formControlName="userid" type="text" />
-            </div>
+<form [formGroup]="settingsForm" (ngSubmit)="onSubmit()">
 
-            <div class="form-row">
-                <label for="password">Password</label>
-                <input id="password" formControlName="password" type="password" />
-            </div>
-        </fieldset>
+    <div class="container">
+        <h2>🧑‍💻 User Registration</h2>
+
+        <!-- Login Information Section -->
+        @if(currentStep === 1) {
+            <fieldset class="section" formGroupName="login">
+                @let userid = settingsForm.get("login")?.get("userid");
+                @let password = settingsForm.get("login")?.get("password");
+
+                <legend>Login Information (1/3)</legend>
+                <div class="form-row">
+                    <mat-form-field>
+                        <mat-label>User ID</mat-label>
+                        <input matInput id="userid" formControlName="userid" type="text" />
+                        @if (userid?.hasError("required")) {
+                            <mat-error>
+                                Enter a valid userid.
+                            </mat-error>
+                        }
+                        @if (userid?.hasError("alreadyInUse")) {
+                            <mat-error>
+                                That userid is not available.
+                            </mat-error>
+                        }
+                        @if (userid?.valid) {
+                            <mat-icon matSuffix class="valid-check">check_circle</mat-icon>
+                        }
+                    </mat-form-field>
+                </div>
+
+                <div class="form-row">
+                    <mat-form-field>
+                        <mat-label>Password</mat-label>
+                        <input matInput id="password" formControlName="password" type="password" />
+                        <mat-error>
+                            Enter a valid password.
+                        </mat-error>
+                        @if (password?.valid) {
+                            <mat-icon matSuffix class="valid-check">check_circle</mat-icon>
+                        }
+                    </mat-form-field>
+                </div>
+            </fieldset>
+        }
 
         <!-- Personal Information Section -->
-        <fieldset class="section">
-            <legend>Personal Information</legend>
+        @if(currentStep === 2) {
+            <fieldset class="section" formGroupName="personal">
+                @let name = settingsForm.get("personal")?.get("name");
+                @let nickname = settingsForm.get("personal")?.get("nickname");
+                @let address = settingsForm.get("personal")?.get("address");
+                @let phone = settingsForm.get("personal")?.get("phone_number");
+                @let email = settingsForm.get("personal")?.get("email");
 
-            <div class="form-row">
-                <label for="name">Name</label>
-                <input id="name" formControlName="name" type="text"
-                    matTooltip="Your full name, shown to your friends." />
-            </div>
+                <legend>Personal Information (2/3)</legend>
 
-            <div class="form-row">
-                <label for="nickname">Nickname</label>
-                <input id="nickname" formControlName="nickname" type="text"
-                    matTooltip="Your nickname (or First Name + Last Initial), shown to neighbors that are not your friend." />
-            </div>
+                <div class="form-row">
+                    <mat-form-field>
+                        <mat-label>Name</mat-label>
+                        <input matInput id="name" formControlName="name" type="text" placeholder="e.g. John Q. Tablesaw"
+                            matTooltip="Your full name, shown to your friends." />
+                        <mat-error>
+                            Name is required.
+                        </mat-error>
+                        @if (name?.valid) {
+                            <mat-icon matSuffix class="valid-check">check_circle</mat-icon>
+                        }
+                    </mat-form-field>
+                </div>
 
-            <div class="form-row">
-                <label for="address" class="narrower">Address</label>
-                @if(addressValid) {
-                    <div class="icon" matTooltip="We found your address!">👍</div>
-                }
-                @else {
-                    <div class="icon"matTooltip="We can't find your address.  Please try re-entering it.">❌</div>
-                }
-                <textarea id="address" formControlName="address" rows="3" (blur)="validateAddress()"></textarea>
-            </div>
+                <div class="form-row">
+                    <mat-form-field>
+                        <mat-label>Nickname</mat-label>
+                        <input matInput id="nickname" formControlName="nickname" type="text" placeholder="e.g. Johnny 4 Fingers"
+                            matTooltip="Your nickname (or First Name + Last Initial), shown to neighbors that are not your friend." />
+                        @if (nickname?.touched && nickname?.valid) {
+                            <mat-icon matSuffix class="valid-check">check_circle</mat-icon>
+                        }
+                    </mat-form-field>
+                </div>
 
-            <div class="form-row">
-                <label for="photo" class="narrower">Photo</label>
-                @if (this.settingsForm.get('photo')?.value) {
-                    <div class="icon" (click)="resetPhoto()" matTooltip="Discard this picture."><fa-icon [icon]="faTrash"></fa-icon></div>
-                }
-                @else {
+                <div class="form-row">
+                    <mat-form-field>
+                        <mat-label>Address</mat-label>
+                        <textarea matInput id="address" formControlName="address" rows="3" placeholder="e.g. 800 S Mint St, Charlotte, NC 28202"></textarea>
+                        @if (address?.hasError('required')) {
+                            <mat-error>
+                                Address is required.
+                            </mat-error>
+                        }
+                        @else if (address?.invalid) {
+                            <mat-error>
+                                We're unable to find your address, try again?
+                            </mat-error>
+                        }
+                        @if (address?.valid) {
+                            <mat-icon matSuffix class="valid-check">check_circle</mat-icon>
+                        }
+                    </mat-form-field>
+                </div>
+
+                <div class="form-row">
+                    <mat-form-field>
+                        <mat-label>Phone Number</mat-label>
+                        <input matInput id="phone_number" formControlName="phone_number" type="text" placeholder="e.g. (555) 123-4567"
+                            matTooltip="Your phone number. This will only ever be shown (if you choose) to friends when they borrow your tools." />
+                        <mat-error>
+                            Please enter a valid phone number.
+                        </mat-error>
+                        @if (phone?.valid) {
+                            <mat-icon matSuffix class="valid-check">check_circle</mat-icon>
+                        }
+                    </mat-form-field>
+                </div>
+
+                <div class="form-row">
+                    <mat-form-field>
+                        <mat-label>Email Address</mat-label>
+                        <input matInput id="email" formControlName="email" type="text" placeholder="e.g. rockstar@gmail.com"
+                            matTooltip="Your email address. This will only ever be shown (if you choose) to friends when they borrow your tools." />
+                        <mat-error>
+                            Please enter a valid email address.
+                        </mat-error>
+                        @if (email?.valid) {
+                            <mat-icon matSuffix class="valid-check">check_circle</mat-icon>
+                        }
+                    </mat-form-field>
+                </div>
+            </fieldset>
+        }
+
+        <!-- Photo -->
+        @if(currentStep === 3) {
+            <fieldset class="section" formGroupName="photo">
+                <legend>Your Photo (3/3)</legend>
+
+                <div class="form-row">
+                    <label for="photo" class="narrower">Photo</label>
+                    @if (this.settingsForm.get('photo')?.value) {
+                    <div class="icon" (click)="resetPhoto()" matTooltip="Discard this picture."><fa-icon
+                            [icon]="faTrash"></fa-icon></div>
+                    }
+                    @else {
                     <div class="icon blank"><fa-icon [icon]="faTrash"></fa-icon></div>
+                    }
+                    <input #photoInput id="photo" type="file" (change)="onPhotoSelected($event)" accept="image/*" />
+                </div>
+                @if (photoPreview != null) {
+                    <div class="preview">
+                        <img [src]="photoPreview" alt="Photo preview" />
+                    </div>
                 }
-                <input #photoInput id="photo" type="file" (change)="onPhotoSelected($event)" accept="image/*" />
-            </div>
+            </fieldset>
+        }
 
-            @if (photoPreview) {
-            <div class="preview">
-                <img [src]="photoPreview" alt="Photo preview" />
-            </div>
+        <div class="buttons">
+            @if (currentStep > 1) {
+                <button type="button" mat-raised-button (click)="previousStep()">Previous Step</button>
             }
-        </fieldset>
-        <button type="submit" [disabled]="(!settingsForm.dirty && !photoChanged) || settingsForm.invalid || !addressValid">Save Changes</button>
-    </form>
-</div>
+            @if (currentStep < 3) {
+                <button type="button" mat-raised-button (click)="nextStep()">Next Step</button>
+            }
+            @if (currentStep == 3) {
+                <button mat-raised-button type="submit"
+                    [disabled]="settingsForm.invalid">
+                    <span [ngClass]="{ 'spinner-border spinner-border-sm': loading }"></span> Register
+                </button>
+            }
+        </div>
 
-<div class="donthavea">
-    <span [routerLink]="'/login'">
-        Already have an account?
-    </span>
-</div>
+        @if (currentStep == 1) {
+            <div class="buttons">
+                <span [routerLink]="'/login'">
+                    <button class="donthavea" mat-raised-button>
+                        Already have an account?
+                    </button>
+                </span>
+            </div>
+        }
+    </div>
+
+</form>
