--- a/src/app/user/register/register.component.scss
+++ b/src/app/user/register/register.component.scss
@@ -1,21 +1,26 @@
-.donthavea {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    padding-top: 50px;
-    color: indigo;
+:host {
+  display: flex;
+  background-image: url('/intro.png');
+  background-size: cover;
+  background-position: center;
+  height: 100%;
+  justify-content: center;
 }
 
-
-
-.settings-container {
-  max-width: 600px;
-  margin: auto;
-  padding: 2rem;
-  box-shadow: 0 0 10px rgba(0,0,0,0.1);
-  background: linear-gradient(to bottom right, #fffacd, #f0e68c);
-  border: 4px solid #333;
-  border-radius: 15px !important;
+.container {
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+    height: fit-content;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    background: linear-gradient(to bottom right, rgba(255, 250, 205, 0.9), rgba(240, 230, 140, 0.9));
+    border-radius: 12px;
+    box-shadow: 0 0 4px rgba(0,0,0,0.2);
+    border: 4px solid #333;
+    padding: 2rem;
 }
 
 h2 {
@@ -26,6 +31,7 @@ h2 {
 }
 
 .section {
+  width: 100%;
   margin-bottom: 2rem;
   padding: 1rem;
   border: 1px solid #ddd;
@@ -43,7 +49,8 @@ legend {
 .form-row {
   display: flex;
   align-items: center;
-  margin-top: 0.5rem;
+  // margin-top: 0.5rem;
+  font-size: 12px
 }
 
 label {
@@ -64,12 +71,17 @@ label.narrower {
   visibility:hidden !important;
 }
 
-input, textarea {
+mat-form-field {
   flex: 1;
-  padding: 0.5rem;
-  border: 1px solid #ccc;
-  border-radius: 6px;
-  font-size: 1rem;
+  width: 200px;
+  min-width: 200px;
+}
+
+.valid-check {
+  color: green;
+  animation: bounceIn 0.3s ease;
+  font-size: 20px;
+  margin-left: 4px;
 }
 
 .preview {
@@ -85,19 +97,19 @@ input, textarea {
   object-fit: contain;
 }
 
-button {
-  margin-top: 1.5rem;
-  width: 100%;
-  padding: 0.75rem;
-  background-color: #0078d4;
-  color: white;
-  border: none;
-  border-radius: 6px;
-  font-size: 1rem;
-  cursor: pointer;
+.buttons {
+    display: flex;
+    width: fit-content;
+    margin-bottom: 1em;
+    gap: 1rem;
 }
 
-button:disabled {
-  background-color: #aaa;
-  cursor: not-allowed;
+.donthavea {
+    font-style: italic;
+}
+
+@keyframes bounceIn {
+  0%   { transform: scale(0.8); opacity: 0; }
+  60%  { transform: scale(1.2); opacity: 1; }
+  100% { transform: scale(1); }
 }
