--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,9 +1,6 @@
 <div class="container">
     <h2>🧑‍💻 User Login</h2>
     <mat-card>
-        <mat-card-header>
-            <mat-card-title>Login</mat-card-title>
-        </mat-card-header>
         <mat-card-content>
             <form id="login" [formGroup]="loginFormGroup" (ngSubmit)="login()">
 
@@ -21,23 +18,35 @@
                     <mat-label>Password</mat-label>
                     <input matInput [type]="hidePassword ? 'password' : 'text'" formControlName="password" required>
                 </mat-form-field>
-
-                <!-- Submission error message -->
-                @if (errorMessage.length > 0) {
-                    <mat-error>
-                        {{ errorMessage }}
-                    </mat-error>
-                }
             </form>
-
         </mat-card-content>
     </mat-card>
+
+    @if (errorMessage) {
+        <div class="error-container">
+            <div class="error-icon">⚠️</div>
+            <div class="error-message">
+                <h3>Oops! Something went wrong.</h3>
+                <p>{{ errorMessage }}</p>
+            </div>
+        </div>
+    }
 
     <div class="buttons">
 
         <!-- Login button -->
-        <button mat-raised-button class="first_button" [disabled]="!loginFormGroup.valid" form="login" type="submit">
-            <span [ngClass]="{ 'spinner-border spinner-border-sm': loading }"></span> Login 
+        <button mat-raised-button class="first_button" [disabled]="!loginFormGroup.valid || loading" form="login" type="submit">
+            @if (loading) {
+                <mat-progress-spinner
+                    diameter="20"
+                    mode="indeterminate"
+                    color="accent"
+                    class="spinner-inline">
+                </mat-progress-spinner>
+            }
+            @else {
+                <span [ngClass]="{ 'spinner-border spinner-border-sm': loading }"></span> Login 
+            }
         </button> 
 
         <!-- Forgot password button -->
