--- a/src/app/browsetools/browsetools.component.html
+++ b/src/app/browsetools/browsetools.component.html
@@ -1,28 +1,32 @@
 <div class="container" #parentContainer>
     <div class="left-section" #leftSection>
         @if(allVisibleObjects) {
-            <div class="header">
-                <h2><span [class.bounce]="objectCountBounceFlag()">🔍</span> <span [class.bounce]="objectCountBounceFlag()">{{ allVisibleObjectsCount() }}</span> Tools</h2>
-                <span>Search radius:</span>
-                <select #radiusSelect [(ngModel)]="this.radius" (change)="radiusChange(+radiusSelect.value)">
-                    @for (radius of this.globalValuesService.browseRadii; track radius.value) {
-                        <option [value]="radius.value">{{ radius.text }}</option>
-                    }
-                </select>
+            <div class="top-section">
+                <div class="header">
+                    <h2><span [class.bounce]="objectCountBounceFlag()">🔍</span> <span [class.bounce]="objectCountBounceFlag()">{{ allVisibleObjectsCount() }}</span> Tools</h2>
+                    <span>Search radius:</span>
+                    <select #radiusSelect [(ngModel)]="this.radius" (change)="radiusChange(+radiusSelect.value)">
+                        @for (radius of this.globalValuesService.browseRadii; track radius.value) {
+                            <option [value]="radius.value">{{ radius.text }}</option>
+                        }
+                    </select>
+                </div>
             </div>
 
-            @for(tool of allVisibleObjects; track tool.id; let i = $index) {
-                <div #objectCards>
-                    @defer (on viewport) {
-                        <app-browse-tool-card [object]="tool" (click)="onListObjectClick(i)"></app-browse-tool-card>
-                    }
-                    @placeholder { 
-                        <div class="tool-card-placeholder">
-                            <mat-spinner></mat-spinner>
-                        </div>
-                    }
-                </div>
-            }
+            <div class="bottom-section">
+                @for(tool of allVisibleObjects; track tool.id; let i = $index) {
+                    <div #objectCards>
+                        @defer (on viewport) {
+                            <app-browse-tool-card [object]="tool" (click)="onListObjectClick(i)"></app-browse-tool-card>
+                        }
+                        @placeholder { 
+                            <div class="tool-card-placeholder">
+                                <mat-spinner></mat-spinner>
+                            </div>
+                        }
+                    </div>
+                }
+            </div>
         }
     </div>
 
